# antidote

./: .gitignore  README.md  check-upstream.sh  com.antidote.agent.plist  project-state.md  pyproject.toml  start.sh  wizard.py
antidote/: __init__.py  __main__.py  config.py  main.py
antidote/agent/: context.py  loop.py
antidote/channels/: __init__.py  base.py  telegram.py
antidote/memory/: store.py
antidote/providers/: __init__.py  base.py  ollama.py  openrouter.py
antidote/security/: safety.py  secrets.py
antidote/tools/: __init__.py  base.py  filesystem.py  registry.py  shell.py
workspace/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
workspace/About_BR/: BR_OS_profile.md  writeprint-br-executive_coach_educator_writer.md
workspace/About_Projects/: LearnWell-Visibility-Plan.md  LearnWell_Profile_v1.1.md
workspace/About_Projects/MMP-AI-Outreach/: MMP-AI_Outreach_Sequence_v2.1.md  The_80_20_Content_Protocol.md  lw-lp-mmp-ai PDF.md
workspace/projects/: current-sprint.md  quarterly-goals.md
workspace/reference/: content-calendar.md  fsf-stack-conventions.md  ideal-client-profile.md  product-portfolio.md
workspace/templates/: client-proposal.md  email-outreach.md  rated-evaluation.md
