[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antidote"
version = "0.1.0"
description = "The antidote to bloated AI frameworks. A personal AI assistant."
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "python-telegram-bot>=21.0",
    "cryptography>=42.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[tool.setuptools.packages.find]
include = ["antidote*"]

[project.scripts]
antidote = "antidote.main:cli"
